--- a/_posts/2017-03-17-ABUS.md
+++ b/_posts/2017-03-17-ABUS.md
@@ -52,7 +52,7 @@ To help ABUS enable their customers to use their devices in a more secure and co
 - Architecture design session – To define a secure and scalable architecture for the ABUS IoT gateway solution
 - Proof of concept – To test and verify that Microsoft technology solves ABUS's problems and helps their customers
 
-Currently a typical ABUS customer scenario looks like this:
+Currently, a typical ABUS customer scenario looks like this:
 
 <img alt="ABUS traditional IP setup" src="{{ site.baseurl }}/images/2017-03-17-ABUS/TraditionalIPSetup.png" width="960">
 
@@ -86,7 +86,7 @@ Azure Functions takes care that telemetry data and custom event data gets filter
 
 What has changed in this scenario is three major things:
 
-- No ports need to be open on the Internet router because the gateway actively connects to IoT Hub using MQTT and the connection is initiated from inside the local network. This connection then builds the tunnel for all communication from and to the internal devices using the gateway. Any IPV4/IPV6 translation and NATing issues are gone.
+- No ports need to be open on the Internet router because the gateway actively connects to IoT Hub using MQTT and the connection is initiated from inside the local network. This connection then builds the tunnel for all communication from and to the internal devices using the gateway. Any IPV4/IPV6 translation and NAT issues are gone.
 - The Windows 10 IoT Core operating system and the UWP app on the gateway are updated automatically no matter whether or how frequently the firmware of the internal ABUS device is updated. This makes closing security bugs much easier and puts control back in the hands of ABUS.
 - The mobile apps use a single endpoint to talk to all known devices behind the gateway and do not need to know where these devices are.
 
@@ -102,30 +102,35 @@ During the development phase, we had to overcome a few technical challenges in c
 
 ## Development setup ##
 
-- Devices used
-  - **ABUS hardware**
-    - ABUS Secvest alarm panel
-    - ABUS IP dome cameras (1080p and 720p)
-    - ABUS window sensors
+**Devices used**
 
-      ![Photo of ABUS hardware board with Secvest alarm panel, two sizes of dome cameras, and five window sensors]({{ site.baseurl }}/images/2017-03-17-ABUS/WP_20170412_09_50_36_Pro.jpg)
+- **ABUS hardware**
+  - ABUS Secvest alarm panel
+  - ABUS IP dome cameras (1080p and 720p)
+  - ABUS window sensors
 
-    - ABUS AC power switch
+    ![Photo of ABUS hardware board with Secvest alarm panel, two sizes of dome cameras, and five window sensors]({{ site.baseurl }}/images/2017-03-17-ABUS/WP_20170412_09_50_36_Pro.jpg)
 
-      ![Photo of ABUS AC power switch in wall outlet]({{ site.baseurl }}/images/2017-03-17-ABUS/WP_20170412_09_50_47_Pro.jpg)
+  - ABUS AC power switch
 
-  - **IoT device**
-    - Raspberry Pi 3 running Windows 10 IoT Core
-    - UWP IoT app written in C#
-- Development environment
-  - Visual Studio 2017 RC
-  - Windows 10 Professional
-  - Azure SDK for .NET
-  - Visual Studio Team Services using Git as the source-code repository
-- Important frameworks
-  - [kreuzhofer/iot_homesecurity](https://github.com/kreuzhofer/iot_homesecurity) as the UWP IoT app framework
-  - [tomkuijsten/restup](https://github.com/tomkuijsten/restup) (web server for UWP apps)
-  - [ASP.NET MVC](https://www.asp.net/mvc) (web application and REST services)
+    ![Photo of ABUS AC power switch in wall outlet]({{ site.baseurl }}/images/2017-03-17-ABUS/WP_20170412_09_50_47_Pro.jpg)
+
+- **IoT device**
+  - Raspberry Pi 3 running Windows 10 IoT Core
+  - UWP IoT app written in C#
+
+**Development environment**
+
+- Visual Studio 2017 RC
+- Windows 10 Professional
+- Azure SDK for .NET
+- Visual Studio Team Services using Git as the source-code repository
+
+**Important frameworks**
+
+- [kreuzhofer/iot_homesecurity](https://github.com/kreuzhofer/iot_homesecurity) as the UWP IoT app framework
+- [tomkuijsten/restup](https://github.com/tomkuijsten/restup) (web server for UWP apps)
+- [ASP.NET MVC](https://www.asp.net/mvc) (web application and REST services)
 
 The final version of the prototype is available on GitHub: [kreuzhofer/iot_homesecurity/tree/ABUS](https://github.com/kreuzhofer/iot_homesecurity/tree/ABUS).
 
@@ -345,7 +350,7 @@ The configuration file has two main sections:
 
 #### Lua functions
 
-Let's have a look at one sample Lua script that polls the ABUS Secvest alarm panel every minute for the current status:
+Here's one sample Lua script that polls the ABUS Secvest alarm panel every minute for the current status:
 
 ```lua
 function run()
@@ -447,11 +452,11 @@ On the Azure side of things, let's begin with IoT Hub, which takes in messages f
 
 To be able to send Log messages to a different queue, we defined a custom endpoint in IoT Hub.
 
-![IoT Hub custom endpoints]({{ site.baseurl }}/images/2017-03-17-ABUS/IoTHubEndpoints.png)
+<img alt="Screen shot of IoT Hub custom endpoints" src="{{ site.baseurl }}/images/2017-03-17-ABUS/IoTHubEndpoints.png" width="903">
 
 Then we created a special route that filters out Log messages and sends them to the Log endpoint.
 
-![IoT Hub routes]({{ site.baseurl }}/images/2017-03-17-ABUS/IoTHubRoutes.png)
+<img alt="Screen shot of IoT Hub routes" src="{{ site.baseurl }}/images/2017-03-17-ABUS/IoTHubRoutes.png" width="920">
 
 ### Azure Stream Analytics
 
@@ -460,9 +465,9 @@ Stream Analytics is used to direct device messages to different targets:
 - Azure Table storage for device status and device messages
 - Power BI for data visualization
 
-The Stream Analytics query looks like this
+The Stream Analytics query looks like this:
 
-```
+```sql
 SELECT
     DeviceId,
     DeviceType,
@@ -503,35 +508,35 @@ FROM
 TIMESTAMP BY LocalTimestamp
 ```
 
-The queries that insert data into the "DeviceState" and "DeviceMessages" tables basically look the same but they still create different results:
+The queries that insert data into the DeviceState and DeviceMessages tables basically look the same, but they create different results:
 
-The DeviceState output takes DeviceId and ChannelKey for the PartitionKey and RowKey values and so generates only one entry per ChannelKey.
+- The DeviceState output takes DeviceId and ChannelKey for the PartitionKey and RowKey values and so generates only one entry per ChannelKey.
 
-![Azure Tables]({{ site.baseurl }}/images/2017-03-17-ABUS/StreamAnalyticsDeviceState.png)
+  ![Screen shot of Azure Table insertion definition for DeviceState]({{ site.baseurl }}/images/2017-03-17-ABUS/StreamAnalyticsDeviceState.png)
 
-The DeviceMessages output takes the DeviceId and LocalTimestamp value for the PartitionKey and RowKey and so generates an entry for every message sent to IoT Hub.
+- The DeviceMessages output takes the DeviceId and LocalTimestamp value for the PartitionKey and RowKey and so generates an entry for every message sent to IoT Hub.
 
-![Azure Tables]({{ site.baseurl }}/images/2017-03-17-ABUS/StreamAnalyticsDeviceMessages.png)
+  ![Screen shot of Azure Table insertion definition for DeviceMessages]({{ site.baseurl }}/images/2017-03-17-ABUS/StreamAnalyticsDeviceMessages.png)
 
-We then can have a first view of what's in the Azure Tables using Storage Explorer. For the DeviceState table we can see that the current Secvest state is reflected by one row.
+We then can have a first view of what's in Azure Table by using Storage Explorer. For the DeviceState table, we can see that the current Secvest state is reflected by one row.
 
-![Azure Tables]({{ site.baseurl }}/images/2017-03-17-ABUS/AzureTablesDeviceState.png)
+<img alt="Screen shot of DeviceState table" src="{{ site.baseurl }}/images/2017-03-17-ABUS/AzureTablesDeviceState.png" width="920">
 
 In the DeviceMessages table we see all incoming messages.
 
-![Azure Tables]({{ site.baseurl }}/images/2017-03-17-ABUS/AzureTablesDeviceMessages.png)
+<img alt="Screen shot of DeviceMessages table" src="{{ site.baseurl }}/images/2017-03-17-ABUS/AzureTablesDeviceMessages.png" width="920">
 
 ### Azure Functions
 
-In section "Azure IoT Hub" we wrote about filtering out the Log messages into a seperate EventHub queue. This EventHub queue is monitored by an Azure Function that processes the log messages. For debugging purposes we log out every message and apply another filtering on "Critial" errors, which might be important to forward to another queue.
+In section [Azure IoT Hub](#azure-iot-hub), we wrote about filtering the Log messages into a separate EventHub queue. This EventHub queue is monitored by an Azure function that processes the log messages. For debugging purposes, we log every message and apply another filter on critical errors, which might be important to forward to another queue.
 
-The azure function is written in C#. You can see from the screenshot that it processes and outputs log entries into the Azure Function Logs window:
+The Azure function is written in C#. You can see from the screen shot that it processes and outputs log entries into the Logs pane of the Azure Functions window:
 
-![Azure Tables]({{ site.baseurl }}/images/2017-03-17-ABUS/AzureFunctionsLogHandler.png)
+<img alt="Screen shot of InputQueueFunction with Logs pane" src="{{ site.baseurl }}/images/2017-03-17-ABUS/AzureFunctionsLogHandler.png" width="914">
 
-The code itself is pretty straightforward. It takes an EventHub message, creates an object by using Newtonsoft JsonConvert and checks if it is a Log message and then addionally if it is a critical error.
+The code itself is pretty straightforward. It takes an EventHub message, creates an object by using Newtonsoft JsonConvert, and checks whether it is a Log message and then additionally whether it is a critical error.
 
-```
+```csharp
 #r "Newtonsoft.Json"
 using System;
 using Newtonsoft.Json;
@@ -553,76 +558,70 @@ public static void Run(string myEventHubMessage, TraceWriter log)
 }
 ```
 
-### Azure App Service - Device Portal Web App
+### Azure App Service: Device portal web app
 
-#### Device List
+#### Device list
 
-Finally, looking at the AppService Web App we can see which devices are connected to the cloud.
+Finally, looking at the web app, we can see which devices are connected to the cloud.
 
-![Device Portal]({{ site.baseurl }}/images/2017-03-17-ABUS/screenshot_device_portal.png)
+<img alt="Screen shot of Devices list in Device Portal" src="{{ site.baseurl }}/images/2017-03-17-ABUS/screenshot_device_portal.png" width="839">
 
-#### Device Messages
+#### Device messages
 
-We can send messages to the device, which get handled by the AzureIoTHubDevice's MessageReceiverLoop.
+We can send messages to the device, which get handled by MessageReceiverLoop in AzureIoTHubDevice.
 
-![Device Portal]({{ site.baseurl }}/images/2017-03-17-ABUS/WebPortalSendMessage.png)
+<img alt="Screen shot of device-message dialog box in Device Portal" src="{{ site.baseurl }}/images/2017-03-17-ABUS/WebPortalSendMessage.png" width="839">
 
-#### Device Remote Configuration
+#### Device remote configuration
 
-In the "Edit" dialog for a device, there is an Editor field where one can put a http url, which points to a new configuration file for the device.
+In the Edit page for a device, one can specify a URL that points to a new configuration file for the device.
 
-![Device Portal]({{ site.baseurl }}/images/2017-03-17-ABUS/WebPortalConfigurationFile.png)
+<img alt="Screen shot of Edit page for DeviceData in Device Portal" src="{{ site.baseurl }}/images/2017-03-17-ABUS/WebPortalConfigurationFile.png" width="839">
 
-As soon as this information is saved, the device twin gets updated with the new url and on the device side the new configuration gets loaded (by restarting the app):
+As soon as this information is saved, the device twin gets updated with the new URL; on the device side, the new configuration gets loaded (by restarting the app).
 
-```
-AzureIoTHubDevice.cs
+*AzureIoTHubDevice.cs*
+
+```csharp
 ⁞
-		private async Task DesiredPropertyUpdateCallback(TwinCollection desiredProperties, object userContext)
-		{
-			Debug.WriteLine(desiredProperties.ToString());
-			if (desiredProperties.Contains("configurationUrl"))
-			{
-				await DownloadConfigAndRestart(desiredProperties);
-			}
-		}
+private async Task DesiredPropertyUpdateCallback(TwinCollection desiredProperties, object userContext)
+{
+	Debug.WriteLine(desiredProperties.ToString());
+	if (desiredProperties.Contains("configurationUrl"))
+	{
+		await DownloadConfigAndRestart(desiredProperties);
+	}
+}
 
-		private async Task DownloadConfigAndRestart(TwinCollection desiredProperties)
-		{
-			// download file
-			var fileToDownload = desiredProperties["configurationUrl"].ToString();
-			var httpClient = new HttpClient();
-			var configFileContent = await httpClient.GetStringAsync(new Uri(fileToDownload));
+private async Task DownloadConfigAndRestart(TwinCollection desiredProperties)
+{
+	// download file
+	var fileToDownload = desiredProperties["configurationUrl"].ToString();
+	var httpClient = new HttpClient();
+	var configFileContent = await httpClient.GetStringAsync(new Uri(fileToDownload));
 
-			// save to disk
-			var localStorage = ApplicationData.Current.LocalFolder;
-			var file = await localStorage.CreateFileAsync("configuration.json", CreationCollisionOption.ReplaceExisting);
-			await FileIO.WriteTextAsync(file, configFileContent);
+	// save to disk
+	var localStorage = ApplicationData.Current.LocalFolder;
+	var file = await localStorage.CreateFileAsync("configuration.json", CreationCollisionOption.ReplaceExisting);
+	await FileIO.WriteTextAsync(file, configFileContent);
 
-			var queue = ServiceLocator.Current.GetInstance<IMessageQueue>();
-			queue.Enqueue("management", "exit", null, null); // restart the app, StartupTask takes care of this
-		}
+	var queue = ServiceLocator.Current.GetInstance<IMessageQueue>();
+	queue.Enqueue("management", "exit", null, null); // restart the app (StartupTask takes care of this)
+}
 ⁞
 ```
 
 ## Conclusion ##
 
-In our engagement with ABUS, we successfully managed to connect the Secvest alarm panel to Azure IoT Hub using Windows 10 IoT Core and a UWP app as the middleware to broker messages and get a secure and reliable messaging channel. ABUS at a very early stage of the project decided to contract for the Microsoft Azure Cloud Germany because of the unique security and legal model as well as the trusted Microsoft Azure technology stack.
+In our engagement with ABUS, we successfully connected the Secvest alarm panel to Azure IoT Hub using Windows 10 IoT Core and a UWP app as the middleware to broker messages and get a secure and reliable messaging channel. At a very early stage of the project, ABUS decided to contract for Microsoft Azure Germany because of the unique security and legal model as well as the trusted Azure technology stack.
 
-It looks like the solution is usable for taking it one step further and integrate more ABUS devices and create a re-usable solution for other clients. From our side we will continue to develop the solution to be re-usable and have the latest sources on github for future engagements.
+It looks like the solution is usable for taking it one step further: integrating more ABUS devices and creating a reusable solution for other clients. From our side, we will continue to develop the solution to be reusable and have the latest sources on GitHub for future engagements.
 
-ABUS is currently evaluating the next stages of the project with PoCs, which cover several other aspects of the scenarion like video streaming and VoD. Another step is to find the right hardware for the gateway device, which will have requirements that exceed the Raspberri Pi 3. It will need to have an onboard TPM chip for extended security and onboard EMMC instead of the SD-CARD slot.
+ABUS is currently evaluating the next stages of the project with proofs of concept, which cover several other aspects of the scenario like video streaming and video on demand. Another step is to find the right hardware for the gateway device, which will have requirements that exceed the Raspberry Pi 3. It will need to have an onboard TPM chip for extended security and onboard eMMC instead of the microSD card slot.
 
 ## Additional resources ##
 
-Github repository of the iot_homesecurity base framework:
-- https://github.com/kreuzhofer/iot_homesecurity 
-
-Github repository of the ABUS PoC sourcecodes
-- https://github.com/kreuzhofer/iot_homesecurity/tree/ABUS
-
-ABUS Security-Center GmbH & Co. KG Homepage
-- https://www.abus-sc.de/
-
-A Step-by-Step Guide to Creating Functions Within Azure's IoT Hub
-- https://www.10thmagnitude.com/tech-blog/step-step-guide-creating-functions-within-azures-iot-hub/
+- Github repository of the iot_homesecurity base framework: [kreuzhofer/iot_homesecurity](https://github.com/kreuzhofer/iot_homesecurity)
+- Github repository of the ABUS PoC source code: [kreuzhofer/iot_homesecurity/tree/ABUS](https://github.com/kreuzhofer/iot_homesecurity/tree/ABUS)
+- [ABUS Security-Center GmbH & Co. KG](https://www.abus-sc.de/)
+- [A Step-by-Step Guide to Creating Functions Within Azure's IoT Hub](https://www.10thmagnitude.com/tech-blog/step-step-guide-creating-functions-within-azures-iot-hub/)
