--- a/_posts/2017-03-17-ABUS.md
+++ b/_posts/2017-03-17-ABUS.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Securely connecting ABUS security devices to the Azure cloud"
 author: "Daniel Kreuzhofer"
-author-link: "https://twitter.com/dkreuzh"
+author-link: "https://twitter.com/danieldotnet"
 #author-image: "{{ site.baseurl }}/images/authors/dkreuzh.jpg"
 date: 2017-05-30
 categories: [IoT, Azure App Service]
