--- a/_posts/2017-03-17-ABUS.md
+++ b/_posts/2017-03-17-ABUS.md
@@ -11,6 +11,7 @@ color: "blue"
 excerpt: Microsoft DX Germany joined ABUS Security-Center GmbH & Co. KG to develop an IoT solution that helps ABUS to securely connect their security devices to the Azure cloud in Germany and to envision a new generation of ABUS connected devices.
 language: [English]
 verticals: [Security]
+published: false
 ---
 
 Microsoft DX Germany joined ABUS Security Tech Germany to develop an IoT solution that helps ABUS to securely connect their security devices to the Azure cloud in Germany and to envision a new generation of ABUS connected devices.
