--- a/_posts/2017-04-03-Finaeos.md
+++ b/_posts/2017-04-03-Finaeos.md
@@ -123,7 +123,7 @@ The Finaeos Core solution has a configurable UI based on widgets (nodes) in whic
 
 The home page is where users land after logging in to the app. We wanted a grid of buttons to load dynamically based on the user’s node configuration. The following XAML code shows how the home page uses a Grid layout with a definition of three equally spaced rows and columns on screen. The Grid is defined as a static XAML element, but it is empty because we’ll use C# code to dynamically load it with the right buttons.
 
-```xaml
+```xml
 <StackLayout  Padding="12">
   <!-- The source for this image is set in code since it is dynamic -->
   <Image x:Name="imgLogo" Margin="12" />
@@ -357,7 +357,7 @@ Microsoft.HockeyApp.HockeyClient.Current.Configure(Settings.HockeyAppId);
 
 The HockeyApp portal lets Finaeos team members and administrators review events and crash reports. The portal information provides critical insights during development, and valuable intelligence on how the Finaeos pilot users work with the app before going to production. Finaeos will continue to gather these metrics after the app releases to a customer. Using the metrics, Finaeos will be able to tell which modules are more popular and how the users navigate them. They can discover potential problems and preemptively deal with them.
 
-<img alt="Photo of Dave Voyles and Peter Eng during hackfest" src="{{ site.baseurl }}/images/finaeos/Finaeos-Hackfest-2016-04.jpg" width="603">
+<img alt="Photo of Dave Voyles and Peter Eng during hackfest" src="{{ site.baseurl }}/images/finaeos/Finaeos-Hackfest-2016-04.png" width="603">
 
 ### Mobile DevOps: Set up deployment and provisioning via HockeyApp
 
