--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -69,7 +69,7 @@ Application and output from the Machine Learning algorithm.
 |           | Concept designer             |
 |           | Developer / Security champ   | 
 |           | Two developers               | 
-| BEKK      | ML, IoT Ingestion            |
+|           | ML, IoT Ingestion            |
 | Microsoft | Two technical evangelists    | 
 
 
