--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -45,7 +45,7 @@ The roles that took part in the hackfest were:
 | -------   | ----                         | ---- |
 | Powel     | Project lead                 | -    |  
 |           | Domain expert, water         | -    |
-| BEKK      | ML, IoT Ingestion            | -    | 
+|           | ML, IoT Ingestion            | -    | 
 | Microsoft | Technical Evangelist         | [Pedro Dias](http://twitter.com/digitaldias) |
 |           | Technical Evangelist         | [Olav Tollefsen](http://twitter.com/olavtoll) |
  
