Add tile images (#586)
* Add VAS_thumb.png

* Added 01_thumb.png

* Added 2064_turingHospital.gif

* Added MidbossBot-tile-image-440px.png

* Added team_thumb.png

* Added video_thumb.png

* Updated 2017-05-03-LinkDev.md

Added metadata

* Updated 2017-04-19-e-pity.md

Added tile image

* Updated 2017-03-21-MidbossBot.md

Added tile image

* Updated 2017-04-28-Thermoplan.md

Added tile image

* Updated 2017-04-05-WhaleRoad.md

Added tile image

--- a/_posts/2017-04-19-e-pity.md
+++ b/_posts/2017-04-19-e-pity.md
@@ -7,7 +7,7 @@ author-link: "https://twitter.com/wisniewskit"
 date: 2017-06-08
 categories: [Desktop Bridge]
 color: "blue"
-#image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
+image: "images/2017-04-19-e-pity/01_thumb.png"
 excerpt: This article describes how we converted an Adobe AIR tax application to a UWP app and published it in the Windows Store, including issues we found on the way and how we fixed them.
 language: [English]
 verticals: [Financial Services, Public Sector]
