--- a/_posts/2017-05-03-LinkDev.md
+++ b/_posts/2017-05-03-LinkDev.md
@@ -1,16 +1,17 @@
 ---
 layout: post
-title:  "LinkDev uses App Service to help ALEXBANK implement its empowering Business Passport"
+title: "LinkDev uses App Service to help ALEXBANK implement its empowering Business Passport"
 author: "Sherif El Mahdi"
 author-link: "https://twitter.com/_SherifElMahdi"
 #author-image: "{{ site.baseurl }}/images/authors/SherifElMahdi.jpg"
-date:   2017-06-08
+date: 2017-06-08
 categories: [Azure App Service, Azure Functions]
 color: "blue"
-#image: "{{ site.baseurl }}/images/imagename.png" #should be ~350px tall
+image: "images/LinkDev/VAS_thumb.png"
 excerpt: Link Development and Microsoft used Azure App Service to develop and deliver ALEXBANK's digital marketplace for small and medium-sized enterprises. 
-language: English
+language: [English]
 verticals: [Banking & Capital Markets]
+geolocation: [Middle East]
 ---
 
 ALEXBANK, named the [Middle East’s Best Bank for SMEs](https://www.alexbank.com/En/News/NewsDetails/Euromoney2) in 2017 for the second year in a row, has ambitious plans that extend into providing non-financial value-added services (VAS) to small and medium-sized enterprises (SMEs). With this goal in mind, the bank launched a major initiative called *ALEXBANK Business Passport.*
