Update verticals (part deux) (#595)
* Updated 2016-09-26-Homitat.md

* Updated 2016-10-01-wiretap.md

* Updated 2016-10-06-reflekt.md

* Updated 2016-10-11-CrokePark.md

* Updated 2016-10-27-Hykso.md

* Updated 2016-11-01-Nexon-eng.md

* Updated 2016-11-01-Nexon-kor.md

* Updated 2016-11-01-yanzi-iot.md

* Updated 2016-11-02-HMS.md

* Updated 2016-11-17-FuseThru.md

* Updated 2016-11-17-Topgolf.md

* Updated 2016-11-18-Powel.md

* Updated 2016-11-21-iceberg.md

* Updated 2016-11-22-Rockstep.md

* Updated 2016-11-29-S3Innovate.md

* Updated 2016-12-02-GTI-Smart-City.md

* Updated 2016-12-12-PolimiMitreo.md

* Updated 2016-12-19-Jamespot.md

* Updated 2016-12-21-CAST-Software.md

* Updated 2017-01-23-IceBird.md

* Updated 2017-01-31-JYP.md

* Updated 2017-02-01-AssecoSolution.md

* Updated 2017-02-01-RockStep.md

* Updated 2017-02-03-Morbido.md

* Updated 2017-02-07-homebaseai.md

* Updated 2017-02-28-RyokaSystem.md

* Updated 2017-02-28-bluebolt.md

* Updated 2017-03-02-FutureTechnologiesInSport.md

* Updated 2017-03-04-DSC-Digiwin.md

* Updated 2017-03-13-Cybercom.md

* Updated 2017-03-14-Bianfeng.md

* Updated 2017-03-15-MusiXmatch.md

* Updated 2017-02-14-POILabs.md

--- a/_posts/2016-09-26-Homitat.md
+++ b/_posts/2016-09-26-Homitat.md
@@ -1,16 +1,18 @@
 ---
 layout: post
-title:  "Building an automated process for Homitat to send messages to Office 365 groups"
+title: "Building an automated process for Homitat to send messages to Office 365 groups"
 author: "Mostafa Elzoghbi"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2017-01-24
+date: 2017-01-24
 categories: [Azure App Service, Azure Functions]
 color: "blue"
 image: "images/Homitat/Homitat-Profile.PNG"
 excerpt: Homitat was looking to automate sending comprehensive messages to Office 365 groups for subscribed users of its location-rating app for home buyers and renters. Microsoft helped integrate the group registration process into the Homitat website.
-language: English
-verticals: [Real Estate, Smart Cities, Retail & Consumer Goods]
+language: [English]
+verticals: [Professional Services]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
 
 One of the toughest and most time-consuming tasks for home buyers is researching whether the location of a prospective home will fit their needs. They need to consider factors such as schools, public transit, safety, shopping, traffic, and more for every listing they are interested in, whether it comes from an agent or online search. Comparing these factors across multiple listings makes it even more complex. 
