--- a/_posts/2016-10-06-reflekt.md
+++ b/_posts/2016-10-06-reflekt.md
@@ -1,16 +1,18 @@
 ---
 layout: post
-title:  "Modernizing customer support through augmented/virtual reality and DevOps"
+title: "Modernizing customer support through augmented/virtual reality and DevOps"
 author: "Manuela Rink"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2017-01-09 
-categories: DevOps
+date: 2017-01-09 
+categories: [DevOps]
 color: "blue"
 image: "images/reflekt/0_current_public.jpg"
 excerpt: Developing cross-platform AR apps is much more effective with a valid DevOps chain in place. That's why RE'FLEKT and Microsoft teamed up to implement an end-to-end solution.
-verticals: [Startup, Mixed Reality]
-language: English
+verticals: [Professional Services]
+language: [English]
+geolocation: [Europe]
+#permalink: /<page-title>.html
 ---
 
 RE’FLEKT is currently on its way to implementing DevOps companywide. With its upcoming product—the Tele-Service platform—which is currently in development, RE’FLEKT will lay the foundation for a globally scalable best practice in DevOps.
