--- a/_posts/2016-10-27-Hykso.md
+++ b/_posts/2016-10-27-Hykso.md
@@ -1,16 +1,18 @@
 ---
 layout: post
-title:  "Hykso: Sending punches to the cloud"
+title: "Hykso: Sending punches to the cloud"
 author: "Steve Seow"
 author-link: "#"
 #author-image: "{{site.baseurl}}/images/steveseow.jpg"
-date:   2016-12-08
+date: 2016-12-08
 categories: [IoT, Azure App Service]
 color: "blue"
 image: "images/hykso04.jpg"
 excerpt: Hykso makes a device that boxers and MMA fighters can use to capture performance data, helping them to measure and improve their punching skills. In a hackathon with Microsoft, a joint team broke new ground by enabling Hykso to tackle a multi-user scenario with Azure Event Hubs and Stream Analytics.     
-language: English
-verticals: Sports
+language: [English]
+verticals: [Entertainment]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
 
 Hykso makes a device that boxers and MMA fighters can use to capture performance data, helping them to measure and improve their punching skills. The company wants to expand the device’s capabilities and so they collaborated in a hackathon with Microsoft. The result was to enable a multi-user scenario by extending sensor data from the local device to the cloud via Azure Event Hubs, coupled with Stream Analytics.
