--- a/_posts/2016-11-02-HMS.md
+++ b/_posts/2016-11-02-HMS.md
@@ -1,21 +1,21 @@
 ---
 layout: post
-title:  "Hendrick Motorsports jumps into Xamarin and Azure to increase mobility"
+title: "Hendrick Motorsports jumps into Xamarin and Azure to increase mobility"
 author: "Shahed Chowdhuri"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2016-12-27
+date: 2016-12-27
 categories: [Mobile Application Development with Xamarin]
 color: "blue"
 image: "images/hms-01-cars.jpg"
 excerpt: Microsoft teamed up with NASCAR team Hendrick Motorsports to expand the capabilities of its crew chiefs with a cross-platform mobile app for iOS, Android, and Windows 10.
-language: English
-verticals: Motorsports
+language: [English]
+verticals: [Entertainment]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
 
 <img src="{{ site.baseurl }}/images/hms-00-logo.jpg" width="400">
-
-
 
 Hendrick Motorsports, which fields several prominent NASCAR teams, worked with Microsoft to expand the capabilities of its race crew chiefs with a cross-platform mobile app that can help them keep track of crucial race details.
 
