--- a/_posts/2016-11-17-Topgolf.md
+++ b/_posts/2016-11-17-Topgolf.md
@@ -9,10 +9,11 @@ categories: [Azure App Service, Azure Functions]
 color: "blue"
 image: "images/Topgolf/topgolf_venue.png"
 excerpt: Topgolf and Microsoft worked jointly to prototype a new system based on Azure App Service to analyze the game play of Topgolf visitors and enable future customer-facing apps. This article describes the development process and the results.
-verticals: Entertainment
-language: English
+verticals: [Entertainment]
+language: [English]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
-
 
 In this joint development effort, held at the Microsoft Reactor in San Francisco during the Azure App Service Hackfest October 21-24, Microsoft teamed up with Topgolf to prototype a new method to analyze the game play of their guests. This new system is used in various capacities to improve customer visits, staffing coordination, and enable future customer-facing applications. In this article, we describe the development process and the outcomes.
 
