--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -1,16 +1,18 @@
 ---
 layout: post
-title:  "Using IoT to detect water leakages with Powel"
+title: "Using IoT to detect water leakages with Powel"
 author: "Pedro Dias"
 author-link: "#"
-#author-image: "../images/powel/pedrodias.jpg"
-date:   2016-11-29
-categories: IoT
+#author-image: "{{ site.baseurl }}/images/powel/pedrodias.jpg"
+date: 2016-11-29
+categories: [IoT]
 color: "blue"
 image: "images/powel/leaking.jpg"
 excerpt: During a hackfest with Microsoft, Powel implemented an IoT solution to help municipalities discover water leakages early, potentially saving resources and money.
-language: English
-verticals: [Smart Cities, Environmental]
+language: [English]
+verticals: [Facility Management]
+geolocation: [Europe]
+#permalink: /<page-title>.html
 ---
 
 Municipalities in Norway are seeing an average water loss of more than 30% due to leakages in their water distribution network. This represents a significant cost that ends up in the hands of consumers. During a week-long hackfest with Microsoft, Powel implemented an IoT solution, ***SmartWater***, that will provide the maintenance staff with the ability to discover and react to these leakages early. This has the potential for huge savings for the municipalities and their customers.
