--- a/_posts/2017-01-31-JYP.md
+++ b/_posts/2017-01-31-JYP.md
@@ -8,8 +8,10 @@ categories: [DevOps]
 color: "blue"
 image: "images/JYPE/jyp-logo.png"
 excerpt: JYP Entertainment wanted to speed deployment and better handle unexpected bursts of traffic. A DevOps-focused hackfest with Microsoft delivered impressive results.
-language: English
+language: [English]
 verticals: [Entertainment]
+geolocation: [Asia]
+#permalink: /<page-title>.html
 ---
 
 <img alt="Logo of JYP Entertainment" src="{{ site.baseurl }}/images/JYPE/jyp-logo.png" width="338">
