--- a/_posts/2017-02-03-Morbido.md
+++ b/_posts/2017-02-03-Morbido.md
@@ -11,7 +11,7 @@ image: "images/MorbidoAscend/Architecture.jpg"
 excerpt: Microsoft and Mórbido worked together to provide a new channel for horror and science-fiction movies through a Xamarin app that offers video streaming, podcasts, news, and more.
 language: [English]
 verticals: [Entertainment]
-geolocation: [North America]
+geolocation: [Central America and the Caribbean]
 #permalink: /<page-title>.html
 ---
 
