--- a/_posts/2017-02-28-bluebolt.md
+++ b/_posts/2017-02-28-bluebolt.md
@@ -9,10 +9,11 @@ categories: [Azure Functions, Cognitive Services]
 color: "blue"
 image: "images/BlueBolt/team.JPG"
 excerpt: Using a solution that leverages Azure Functions and Cognitive Services, a BlueBolt Solutions search product allows users to define search elements across extensive collections of articles and automatically assign tags, potentially saving hundreds of work hours. 
-verticals: [Data Management]
-language: English
+verticals: [Professional Services]
+language: [English]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
-
 
 Microsoft teamed up with BlueBolt Solutions, a Microsoft partner, to implement a critical feature in its search product, BravoSquared. 
 
