--- a/_posts/2017-03-13-Cybercom.md
+++ b/_posts/2017-03-13-Cybercom.md
@@ -9,8 +9,10 @@ categories: [IoT]
 color: "blue"
 image: "images/2017-03-13-Cybercom/img07.jpg"
 excerpt: Smart Helmet, built by Cybercom, helps make construction sites safer by providing live, wireless monitoring, panic buttons, and multiple sensors. The solution sends telemetry from an LPWAN to the cloud and processes data in Azure.
-language: English
-verticals: [Construction]
+language: [English]
+verticals: [Facility Management, Security]
+geolocation: [Europe]
+#permalink: /<page-title>.html
 ---
 
 Smart Helmet, an IoT solution built by Cybercom, helps prevent accidents and make construction sites safer by providing live, wireless monitoring, panic buttons, and multiple sensors (such as temperature or location). The solution sends telemetry from a low-power wide-area network (LPWAN) to the cloud and processes the data in Microsoft Azure.
