--- a/_posts/2016-10-01-wiretap.md
+++ b/_posts/2016-10-01-wiretap.md
@@ -9,8 +9,10 @@ categories: [Outlook Group Connectors]
 color: "blue"
 image: "images/wiretap-ignite.png"
 excerpt: In this joint development effort, Microsoft teamed up with Wiretap to prototype a new product feature to streamline the process of managing security and policy related violations in the enterprise social network monitoring platform. In this article, we describe the development process and the outcomes.
-verticals: Enterprise Social
-language: English
+verticals: [Professional Services]
+language: [English]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
 
 ## Building an Office 365 Connector for Groups with Wiretap ##
