--- a/_posts/2016-11-01-Nexon-kor.md
+++ b/_posts/2016-11-01-Nexon-kor.md
@@ -9,10 +9,11 @@ categories: [Azure App Service]
 color: "blue"
 image: "images/nexon01.jpg"
 excerpt: This is a Korean-language version of the Nexon hackfest report.
-verticals: [Games, Entertainment]
-language: Korean
+verticals: [Entertainment]
+language: [Korean]
+geolocation: [Asia]
+#permalink: /<page-title>.html
 ---
-
 
 넥슨은 대한민국의 대표 게임 기업이자 글로벌 마켓 리더로 전세계의 게임 플레이어들에게 최고의 게임을 제공하고 있습니다. 넥슨은 마이크로소프트와 함께 게임 서비스에 중요한 고객 이탈 예측 및 게임 AI(인공지능)를 향상시켜 더 재미있는 게임을 플레이어에게 제공하기 위한 Hackfest를 진행했습니다.  
 
@@ -32,7 +33,6 @@ Hackfest 멤버:
 - 김대우 - 마이크로소프트, Sr. Technical Evangelist
 - 류혜원 - 마이크로소프트, Audience Evangelism Manager
 - 김은지 - 마이크로소프트, Technical Evangelist
-
  
 ## 고객사 ##
 
