--- a/_posts/2016-11-17-FuseThru.md
+++ b/_posts/2016-11-17-FuseThru.md
@@ -1,18 +1,19 @@
 ---
 layout: post
-title:  "FuseThru devises a prototype for a Smart Building system using IoT components"
+title: "FuseThru devises a prototype for a Smart Building system using IoT components"
 author: "Ian Philpot"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2016-12-15
-categories: IoT
+date: 2016-12-15
+categories: [IoT]
 color: "blue"
 image: "images/fusethru_building.jpg"
 excerpt: In this joint development effort, Microsoft teamed up with FuseThru to prototype a new system used to monitor atmospheric variables, both inside and outside of the Flatiron Building in Atlanta, GA.
-language: English
-verticals: [Smart Cities, Smart Building, Environmental]
+language: [English]
+verticals: [Facility Management]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
-
 
 In this joint development effort, Microsoft teamed up with FuseThru to prototype a new system used to monitor atmospheric variables, both inside and outside of the Flatiron Building in Atlanta, GA. 
 
