--- a/_posts/2016-11-29-S3Innovate.md
+++ b/_posts/2016-11-29-S3Innovate.md
@@ -1,16 +1,18 @@
 ---
 layout: post
-title:  "Setting up an IoT architecture to help S3 Innovate explore cost-efficient ways to expand its room-monitoring solution"
+title: "Setting up an IoT architecture to help S3 Innovate explore cost-efficient ways to expand its room-monitoring solution"
 author: "Tan Chun Siong"
 author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
-date:   2016-12-26
+date: 2016-12-26
 categories: [IoT]
 color: "blue"
 image: "images/s3innovate/nodemcu-photo.jpg"
 excerpt: This report describes how green solution provider S3 Innovate and Microsoft evaluated the feasibility of using an ESP8266 microcontroller-based IoT device gateway for remote monitoring of meeting rooms to better manage energy consumption.
-language: English
-verticals: [Environmental, Smart Cities]
+language: [English]
+verticals: [Facility Management]
+geolocation: [Asia]
+#permalink: /<page-title>.html
 ---
 
 In this exploration session, S3 Innovate and Microsoft evaluate the feasibility of using an ESP8266 microcontroller-based IoT device gateway for remote monitoring of meeting rooms.
