--- a/_posts/2017-02-01-RockStep.md
+++ b/_posts/2017-02-01-RockStep.md
@@ -9,8 +9,10 @@ categories: [Power BI Embedded]
 color: "blue"
 image: "images/rockstep/rs-logo.png"
 excerpt: Microsoft teamed up with RockStep to deliver real-time IoT data to their labs through Power BI Embedded.
-verticals: [Life Sciences, Facility Management]
-language: English
+verticals: [Facility Management]
+language: [English]
+geolocation: [North America]
+#permalink: /<page-title>.html
 ---
 
 <img alt="Logo of RockStep Solutions" src="{{ site.baseurl }}/images/rockstep/rs-logo.png" width="283">
