--- a/_posts/2017-03-14-Bianfeng.md
+++ b/_posts/2017-03-14-Bianfeng.md
@@ -9,8 +9,10 @@ categories: [Desktop Bridge]
 color: "blue"
 image: "images/BianFeng/GameTitle2.png"
 excerpt: Bypassing the need to upgrade the game engine, BianFeng brought their famous game to the Windows Store by using the Desktop Bridge and guidance from Microsoft.
-language: English
-verticals: [Games]
+language: [English]
+verticals: [Entertainment]
+geolocation: [Asia]
+#permalink: /<page-title>.html
 ---
 
 <img alt="Tale of Wuxia characters" src="{{ site.baseurl }}/images/BianFeng/GameTitle2.png" width="342">
