Update verticals and other metadata (#598)
* Updated 2017-03-22-rock-in-rio.md

* Updated 2017-03-23-Almaviva.md

* Updated 2017-04-19-e-pity.md

* Updated 2017-04-18-IBTech.md

* Updated 2017-01-27-NihonUnisys.md

* Updated 2017-01-27-DroneWorks.md

* Updated 2016-09-01-Xamarin_Bot.md

* Updated 2016-10-24-Powel.md

* Updated 2017-03-21-MidbossBot.md

* Updated 2017-02-27-EmiratesAirLineCableCar.md

* Updated 2016-12-02-GTI-Smart-City.md

* Updated 2016-09-26-Homitat.md

* Updated 2016-11-29-S3Innovate.md

* Updated 2016-11-17-FuseThru.md

* Updated 2017-04-13-MoveInSync.md

* Updated 2017-03-21-kongsberg.md

* Updated 2017-01-10-NorskTid.md

--- a/_posts/2016-10-24-Powel.md
+++ b/_posts/2016-10-24-Powel.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Improving water monitoring through DevOps practices with Powel AS"
 author: "Pedro Dias"
-author-link: "#"
+#author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/pedrodias.jpg"
 date: 2016-11-19
 categories: [DevOps]
@@ -10,9 +10,8 @@ color: "blue"
 image: "images/powel/feat_frontpage.png"
 excerpt: Microsoft worked with Powel to establish DevOps practices for a new SmartWater solution.
 language: [English]
-verticals: [Power & Utilities, Public Sector]
+verticals: [Power & Utilities, Government]
 geolocation: [Europe]
-#permalink: /<page-title>.html
 ---
 
 In this DevOps hackfest, Microsoft teamed up with Powel to hack a brand-new
