--- a/_posts/2016-11-17-FuseThru.md
+++ b/_posts/2016-11-17-FuseThru.md
@@ -2,7 +2,7 @@
 layout: post
 title: "FuseThru devises a prototype for a Smart Building system using IoT components"
 author: "Ian Philpot"
-author-link: "#"
+author-link: "http://twitter.com/tripdubroot"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2016-12-15
 categories: [IoT]
@@ -12,7 +12,6 @@ excerpt: In this joint development effort, Microsoft teamed up with FuseThru to 
 language: [English]
 verticals: [Facility Management]
 geolocation: [North America]
-#permalink: /<page-title>.html
 ---
 
 In this joint development effort, Microsoft teamed up with FuseThru to prototype a new system used to monitor atmospheric variables, both inside and outside of the Flatiron Building in Atlanta, GA. 
