--- a/_posts/2017-01-10-NorskTid.md
+++ b/_posts/2017-01-10-NorskTid.md
@@ -2,17 +2,17 @@
 layout: post
 title: "Improving user experience with the Norsk Tid solution by implementing Xamarin app functionality"
 author: "Anders Gill"
-author-link: "#"
+#author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/andersgill.jpg"
 date: 2017-04-06
-categories: [Xamarin, Mobile DevOps]
+categories: [Mobile Application Development with Xamarin, Mobile DevOps]
 color: "blue"
 image: "images/NorskTid/feat_teamHacking.jpg"
 excerpt: Time management supplier Norsk Tid joined Microsoft in a hackfest to implement new app functionality such as geolocation, notification, and a widget, in addition to setting up new DevOps practices.  
 language: [English]
 verticals: [Professional Services]
 geolocation: [Europe]
-#permalink: /<page-title>.html
+permalink: /xamarin/mobile%20devops/2017/04/06/NorskTid.html
 ---
 
 In this Xamarin hackfest, Microsoft teamed up with **Norsk Tid** to hack an existing solution, **tidBANK**. We describe the process and the results here, including implementation of the following Xamarin application functionality:
