--- a/_posts/2017-04-18-IBTech.md
+++ b/_posts/2017-04-18-IBTech.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Implementing IBTech's cross-platform mobile solution to provide internal LOB application"
+title: "Implementing IBTech's cross-platform mobile solution to provide internal LOB application"
 author: "Ibrahim Kivanc"
 author-link: "https://twitter.com/ikivanc"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
@@ -10,13 +10,11 @@ color: "blue"
 image: "images/ibtech/feat_ibtech_team1.jpeg"
 excerpt: IBTech, together with Microsoft, developed a cross-platform mobile application solution for their employees.
 language: [English]
-verticals: [Financial Services]
+verticals: [Banking & Capital Markets]
 geolocation: [Europe]
 ---
 
 ![IBTech Xamarin Mobile Header]({{ site.baseurl }}/images/ibtech/ibtech_Header.png)
-
-<br/>
 
 IBTech is the IT subsidiary of QNB Finansbank, one of the top 5 private banks of Turkey. IBTech currently has a BYOD (bring your own device) strategy for their employees' mobile phones, so as a result, employees use different types of mobile devices and operating systems. IBTech would like to provide an internal mobile app for its 500+ employees to work across all devices. The company also wants to avoid the cost of developing and testing the application for each platform (namely iOS and Android). This case study describes how IBTech partnered with Microsoft to build an internal application for the QNB Finansbank IT department to meet these needs.
 
