--- a/_posts/2017-04-19-e-pity.md
+++ b/_posts/2017-04-19-e-pity.md
@@ -10,7 +10,7 @@ color: "blue"
 image: "images/2017-04-19-e-pity/01_thumb.png"
 excerpt: This article describes how we converted an Adobe AIR tax application to a UWP app and published it in the Windows Store, including issues we found on the way and how we fixed them.
 language: [English]
-verticals: [Financial Services, Public Sector]
+verticals: [Banking & Capital Markets, Government]
 geolocation: [Europe]
 ---
 
