--- a/_posts/2016-09-26-Homitat.md
+++ b/_posts/2016-09-26-Homitat.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Building an automated process for Homitat to send messages to Office 365 groups"
 author: "Mostafa Elzoghbi"
-author-link: "#"
+#author-link: "#"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2017-01-24
 categories: [Azure App Service, Azure Functions]
@@ -12,7 +12,6 @@ excerpt: Homitat was looking to automate sending comprehensive messages to Offic
 language: [English]
 verticals: [Professional Services]
 geolocation: [North America]
-#permalink: /<page-title>.html
 ---
 
 One of the toughest and most time-consuming tasks for home buyers is researching whether the location of a prospective home will fit their needs. They need to consider factors such as schools, public transit, safety, shopping, traffic, and more for every listing they are interested in, whether it comes from an agent or online search. Comparing these factors across multiple listings makes it even more complex. 
