--- a/_posts/2016-11-29-S3Innovate.md
+++ b/_posts/2016-11-29-S3Innovate.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Setting up an IoT architecture to help S3 Innovate explore cost-efficient ways to expand its room-monitoring solution"
 author: "Tan Chun Siong"
-author-link: "#"
+author-link: "https://twitter.com/tanchunsiong"
 #author-image: "{{ site.baseurl }}/images/authors/photo.jpg"
 date: 2016-12-26
 categories: [IoT]
@@ -12,7 +12,6 @@ excerpt: This report describes how green solution provider S3 Innovate and Micro
 language: [English]
 verticals: [Facility Management]
 geolocation: [Asia]
-#permalink: /<page-title>.html
 ---
 
 In this exploration session, S3 Innovate and Microsoft evaluate the feasibility of using an ESP8266 microcontroller-based IoT device gateway for remote monitoring of meeting rooms.
